@@ -1525,9 +1525,8 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
     <dt id ="cfg_Error_Handler_gather">$cfg['Error_Handler']['gather'] boolean</dt>
     <dd>Whether to gather errors from PHP or not.</dd>
 
-    <dt id="cfg_LeftFrameDBTree">$cfg['LeftFrameDBTree'] boolean</dt>
-    <dd>Defines whether to display the names of databases (in the
-        selector) using a tree, see also
+    <dt id="cfg_NavigationTreeEnableGrouping">$cfg['NavigationTreeEnableGrouping'] boolean</dt>
+    <dd>Defines whether to group the databases based on a common prefix prefix in their name
         <a href="#cfg_LeftFrameDBSeparator" class="configrule">$cfg['LeftFrameDBSeparator']</a>.
     </dd>
 
