@@ -277,8 +277,6 @@ $strConfigLeftDisplayTableFilterMinimum_name = __('Minimum number of tables to d
 $strConfigLeftDisplayDatabaseFilterMinimum_name = __('Minimum number of databases to display the database filter box');
 $strConfigLeftFrameDBSeparator_desc = __('String that separates databases into different tree levels');
 $strConfigLeftFrameDBSeparator_name = __('Database tree separator');
-$strConfigLeftFrameDBTree_desc = __('Only light version; display databases in a tree (determined by the separator defined below)');
-$strConfigLeftFrameDBTree_name = __('Display databases in a tree');
 $strConfigLeftFrameTableLevel_name = __('Maximum table tree depth');
 $strConfigLeftFrameTableSeparator_desc = __('String that separates tables into different tree levels');
 $strConfigLeftFrameTableSeparator_name = __('Table tree separator');
@@ -318,6 +316,8 @@ $strConfigMcryptDisableWarning_desc = __('Disable the default warning that is di
 $strConfigMcryptDisableWarning_name = __('mcrypt warning');
 $strConfigMemoryLimit_desc = __('The number of bytes a script is allowed to allocate, eg. [kbd]32M[/kbd] ([kbd]0[/kbd] for no limit)');
 $strConfigMemoryLimit_name = __('Memory limit');
+$strConfigNavigationTreeEnableGrouping_desc = __('Group items in the navigation tree (determined by the separator defined below)');
+$strConfigNavigationTreeEnableGrouping_name = __('Group items in the tree');
 $strConfigRowActionLinks_desc = __('These are Edit, Copy and Delete links');
 $strConfigRowActionLinks_name = __('Where to show the table row links');
 $strConfigNaturalOrder_desc = __('Use natural order for sorting table and database names');
