@@ -83,10 +83,10 @@ $forms['Left_frame']['Left_frame'] = array(
     'LeftLogoLinkWindow',
     'LeftPointerEnable',
     'LeftRecentTable',
-    'MaxNavigationItems');
+    'MaxNavigationItems',
+    'NavigationTreeEnableGrouping');
 $forms['Left_frame']['Left_databases'] = array(
     'LeftDisplayDatabaseFilterMinimum',
-    'LeftFrameDBTree',
     'LeftFrameDBSeparator');
 $forms['Left_frame']['Left_tables'] = array(
     'LeftDisplayTableFilterMinimum',
